style: add style for .page

--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -27,7 +27,7 @@ $accent-light-blue: #d8eaff;
 
 $bg-overlay: rgba(14, 14, 14, 0.5);
 
-$content-width: 120 rem;
+$content-width: 1440px;
 
 /* font */
 $fw-regular: 400;
