--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -32,7 +32,7 @@
 @mixin section-title($color: $main-black-1) {
   margin: 0;
   color: $color;
-  font-size: 3.2rem;
+  font-size: 32px;
   font-weight: $fw-semibold;
   line-height: 1.25;
 }
@@ -40,7 +40,7 @@
 // для текста
 @mixin text(
   $color: $main-black-1,
-  $font-size: 1.6rem,
+  $font-size: 16px,
   $font-weight: $fw-regular,
   $line-height: normal
 ) {
