--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -24,33 +24,18 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: transparent;
   background-color: $main-white-1;
-
-  main {
-    width: 100%;
-    flex: 1 0 auto;
-  }
-
-  footer {
-    flex: 0 0 auto;
-  }
 }
 
 .page {
   margin: 0;
+  width: 100%;
+  padding: 0 120px;
+  max-width: $content-width;
 
   &_lock {
     overflow: hidden;
     padding-right: 17px;
   }
-}
-
-.wrapper {
-  margin: auto;
-  padding: 0 12rem;
-  max-width: $content-width;
-  width: 100%;
-  height: 100%;
-  position: relative;
 }
 
 .background {
