меняет ширину главных блоков и добавляет Header

--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -27,7 +27,8 @@ $accent-light-blue: #d8eaff;
 
 $bg-overlay: rgba(14, 14, 14, 0.5);
 
-$content-width: 1440px;
+$root-width: 1440px;
+$content-width: 1200px;
 
 /* font */
 $fw-regular: 400;
