добавляет page Employee(страниц сотрудника), в ней блок Profile

--- a/src/components/BackLink/BackLink.module.scss
+++ b/src/components/BackLink/BackLink.module.scss
@@ -2,9 +2,11 @@
 @import '../../styles/abstract/placeholders.scss';
 
 .link {
-  display: inline-flex;
+  display: flex;
   align-items: center;
+  width: fit-content;
   padding: 32px 0;
+  margin-left: 3px;
   gap: 8px;
   @include link;
   @extend %transition-all;
