--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -49,6 +49,9 @@
   font-size: $font-size;
   font-weight: $font-weight;
   line-height: $line-height;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 // это оставлю тут временно, если ховеры будут одинаковыми по проекту,
