--- a/src/components/AboutPlan/AboutePlan.module.scss
+++ b/src/components/AboutPlan/AboutePlan.module.scss
@@ -8,6 +8,16 @@
   border-radius: 30px;
   @include border;
 
+.top{
+  display: flex;
+  gap: 35px;
+}
+
+.bot{
+  display: flex;
+  gap: 50px;
+}
+
   .infoColumn {
     display: flex;
     flex-direction: column;
@@ -31,19 +41,6 @@
     .data {
       padding-top: 16px;
       @include text1
-    }
-  }
-
-  .progressBar {
-    box-sizing: border-box;
-    width: 128px;
-    height: 128px;
-
-    div {
-      font-size: 20px;
-      font-weight: 600;
-      line-height: 24px;
-      color: $main-black-1;
     }
   }
 }
