--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -62,6 +62,9 @@ border: 1px solid $color;
   font-size: $font-size;//400
   font-weight: $font-weight;
   line-height: $line-height;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 //отличается от text жирность 500, line-height 20px
@@ -74,12 +77,30 @@ border: 1px solid $color;
   font-size: $font-size;//500
   font-weight: $font-weight;
   line-height: $line-height;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 //такой же текст, только серый, чаще всего использует для subtitle
 @mixin text1-gray($color: $main-black-secondary-2,
   $font-size: 16px,
   $font-weight: $fw-medium,
   $line-height: 20px) {
+  margin: 0;
+  color: $color;
+  font-size: $font-size;//500
+  font-weight: $font-weight;
+  line-height: $line-height;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+//текст для даты
+@mixin text1-date($color: $main-black-1,
+  $font-size: 12px,
+  $font-weight: $fw-medium,
+  $line-height: 16px) {
   margin: 0;
   color: $color;
   font-size: $font-size;//500
