feat: add statuses for IDPCard

--- a/src/components/AboutPlan/AboutePlan.module.scss
+++ b/src/components/AboutPlan/AboutePlan.module.scss
@@ -8,15 +8,15 @@
   border-radius: 30px;
   @include border;
 
-.top{
-  display: flex;
-  gap: 35px;
-}
+  .top {
+    display: flex;
+    gap: 35px;
+  }
 
-.bot{
-  display: flex;
-  gap: 50px;
-}
+  .bot {
+    display: flex;
+    gap: 50px;
+  }
 
   .infoColumn {
     display: flex;
@@ -40,7 +40,7 @@
 
     .data {
       padding-top: 16px;
-      @include text1
+      @include text1;
     }
   }
 }
