--- a/src/components/IDPCard/IDPCard.module.scss
+++ b/src/components/IDPCard/IDPCard.module.scss
@@ -8,11 +8,66 @@
   grid-template-columns: 48px auto 64px;
   grid-template-rows: min-content 104px;
   gap: 20px 8px;
+  background-color: $main-white-1;
   border: 1px solid $main-white-secondary-3;
   border-radius: 28px;
+  cursor: pointer;
+
+  &.Created {
+    border: 1px solid $system-red;
+  }
+
+  &.Done {
+    border: 1px solid $system-green;
+  }
+
+  &.Canceled {
+    background-color: $main-white-2;
+    border: 1px solid $main-white-secondary-3;
+
+    .title,
+    .job,
+    .name {
+      color: $main-white-secondary-3;
+    }
+
+    .deadline {
+      @include text1-gray;
+      background-color: $main-white-3;
+    }
+  }
+
+  &.InWork {
+    border: 1px solid $main-white-secondary-3;
+  }
+
+  &.Checked {
+    border: 1px solid $system-green;
+
+    .deadline {
+      @include text1($system-green);
+      background-color: $system-light-green;
+    }
+  }
+
+  &.expired {
+    border: 1px solid $system-yellow;
+
+    .deadline {
+      @include text1($system-yellow);
+    }
+  }
+
+  &.empty {
+    border: 1px solid $main-white-secondary-3;
+
+    .deadline {
+      @include text1-gray;
+    }
+  }
 }
 
-.card__img {
+.img {
   width: 44px;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
@@ -20,26 +75,53 @@
   object-position: center;
 }
 
-.card__name {
-  @include text1;
+.wrap {
+  width: 205px;
+  display: flex;
+  gap: 8px;
   grid-row: 1 / 2;
   grid-column: 2 / 3;
 }
 
-.card__job {
+.name {
+  @include text1;
+  max-width: 177px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.message {
+  width: 20px;
+  height: 20px;
+  background-image: url(../../assets/img/icon_comment_empty.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  &.full {
+    background-image: url(../../assets/img/icon_comment_full.svg);
+  }
+}
+
+.job {
   @include text1-gray($font-weight: $fw-regular);
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   align-self: end;
 }
 
-.card__title {
+.title {
   @include text($font-size: 20px, $font-weight: $fw-bold, $line-height: 1.2);
   grid-row: 2 / 3;
   grid-column: 1 / 3;
+  max-width: 270px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.card__deadline {
+.deadline {
   @include text1-gray;
   width: 196px;
   padding: 8px 16px;
@@ -50,10 +132,17 @@
   align-self: end;
 }
 
-.card__progress {
-  width: 64px;
-  aspect-ratio: 1 / 1;
-  border-radius: 50%;
-  background-color: $main-black-secondary-2;
+.progress {
   align-self: end;
+}
+
+.button {
+  @include button;
+  padding: 8px;
+  width: 40px;
+  aspect-ratio: 1 / 1;
+  justify-self: end;
+  background-image: url(../../assets/img/create_idp.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
