--- a/src/components/ExitConfirmPopup/ExitConfirmPopup.module.scss
+++ b/src/components/ExitConfirmPopup/ExitConfirmPopup.module.scss
@@ -13,6 +13,7 @@
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 3;
+  transition: all 0.5s ease-in-out;
 
   .popup_container {
     position: relative;
