--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -40,7 +40,7 @@
   margin: 0;
   color: $color;
   font-size: 32px;
-  font-weight: $font-weight;
+  font-weight: $font-weight;//700
   line-height: 1.25;
 }
 
@@ -61,8 +61,8 @@
 ) {
   margin: 0;
   color: $color;
-  font-size: $font-size; //400
-  font-weight: $font-weight;
+  font-size: $font-size; 
+  font-weight: $font-weight;//400
   line-height: $line-height;
 }
 
