--- a/src/components/IPRCard/IPRCard.module.scss
+++ b/src/components/IPRCard/IPRCard.module.scss
@@ -72,4 +72,12 @@
       cursor: default;
     }
   }
+
+  .button_save {
+    width: 229px;
+  }
+  
+  .button_cancel {
+    width: 137px;
+  }
 }
