--- a/src/components/Helper/Helper.module.scss
+++ b/src/components/Helper/Helper.module.scss
@@ -19,6 +19,10 @@
       @include list;
     }
   }
+
+  .text{
+    @include text($color: $main-black-secondary-2, $line-height: 1.25);
+  }
 }
 
 .advices {
