--- a/src/components/TaskModal/TaskModal.module.scss
+++ b/src/components/TaskModal/TaskModal.module.scss
@@ -35,3 +35,15 @@
     border-bottom: 3px solid $main-red-1;
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+}
+
+.button {
+  width: 192px;
+
+  //color: $main-white-secondary-3;
+}
