создаёт slice user со статусом ipr, редактирует Employee и AboutPlan в зависимости от этого статуса

--- a/src/components/AboutPlan/AboutePlan.module.scss
+++ b/src/components/AboutPlan/AboutePlan.module.scss
@@ -8,6 +8,10 @@
   border-radius: 30px;
   @include border;
 
+  .textCancel {
+    color: $main-white-secondary-3!important;
+  }
+
   .top {
     display: flex;
     gap: 35px;
