fix: correct Helper, TaskCard

--- a/src/components/Helper/Helper.module.scss
+++ b/src/components/Helper/Helper.module.scss
@@ -19,10 +19,11 @@
       @include list;
     }
   }
+}
 
-  .text{
-    @include text($color: $main-black-secondary-2, $line-height: 1.25);
-  }
+.text {
+  @include text($color: $main-black-secondary-2, $line-height: 1.25);
+  @extend %font-prim;
 }
 
 .advices {
