--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -114,7 +114,7 @@
   $color: $main-black-1,
   $font-size: 12px,
   $font-weight: $fw-medium,
-  $line-height: 16px
+  $line-height: 1.33
 ) {
   margin: 0;
   color: $color;
