--- a/src/components/TaskCard/TaskCard.module.scss
+++ b/src/components/TaskCard/TaskCard.module.scss
@@ -1,5 +1,5 @@
-@import "../../styles/abstract/mixins.scss";
-@import "../../styles/abstract/constants.scss";
+@import '../../styles/abstract/mixins.scss';
+@import '../../styles/abstract/constants.scss';
 
 .card {
   display: flex;
@@ -13,7 +13,7 @@
   transition: ease 0.9s;
 
   &:hover {
-    background-color: $main-white-secondary-3;
+    background-color: $main-white-2;
   }
 
   &:active {
