--- a/src/components/BackLink/BackLink.module.scss
+++ b/src/components/BackLink/BackLink.module.scss
@@ -11,10 +11,15 @@
   @include link;
   @extend %transition-all;
 
+  &.all {
+    margin: 0;
+    padding: 0;
+  }
+
   div {
     width: 24px;
     height: 24px;
-    background-image: url("../../assets/img/icon_arrow_left_hover.svg");
+    background-image: url('../../assets/img/icon_arrow_left_hover.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -32,7 +37,7 @@
     }
 
     div {
-      background-image: url("../../assets/img/icon_arrow_left.svg");
+      background-image: url('../../assets/img/icon_arrow_left.svg');
       transform: translateX(-3px);
     }
   }
