--- a/src/components/Dropmenu/Dropmenu.module.scss
+++ b/src/components/Dropmenu/Dropmenu.module.scss
@@ -22,6 +22,10 @@
   border: 1px solid $main-white-3;
   @extend %transition-all;
 
+  &.hover {
+    background-color: $main-white-3;
+  }
+
   &.active {
     background-color: $main-white-3;
     border: 1px solid $main-white-secondary-3;
