--- a/src/components/TaskModalNav/TaskModalNav.module.scss
+++ b/src/components/TaskModalNav/TaskModalNav.module.scss
@@ -8,6 +8,26 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 24px;
+
+  &.allComments {
+    .wrapper {
+      border-bottom: none;
+    }
+
+    .nav_button {
+      border-bottom: none;
+
+      &.active {
+        border-bottom: none;
+      }
+    }
+  }
+}
+
+.wrap_nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .wrapper {
