fix: correct IDPCard

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,8 @@
     @include link;
 
     img {
+      object-fit: cover;
+      object-position: center;
       border-radius: 50%;
       width: 43px;
       height: 43px;
