--- a/src/components/IDPCard/IDPCard.module.scss
+++ b/src/components/IDPCard/IDPCard.module.scss
@@ -19,15 +19,15 @@
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
   }
 
-  &.Created {
+  &.created {
     border: 1px solid $system-red;
   }
 
-  &.Done {
+  &.done {
     border: 1px solid $system-green;
   }
 
-  &.Canceled {
+  &.stoped {
     background-color: $main-white-2;
     border: 1px solid $main-white-secondary-3;
 
@@ -42,11 +42,11 @@
     }
   }
 
-  &.InWork {
+  &.inwork {
     border: 1px solid $main-white-secondary-3;
   }
 
-  &.Checked {
+  &.checked {
     border: 1px solid $system-green;
 
     .deadline {
